testdata/baselines/reference/submodule/conformance/parserComputedPropertyName35.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
parserComputedPropertyName35.ts(2,6): error TS2695: Left side of comma operator is unused and has no side effects.
parserComputedPropertyName35.ts(2,6): error TS1171: A comma expression is not allowed in a computed property name.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== parserComputedPropertyName35.ts (2 errors) ====
    var x = {
        [0, 1]: { }
         ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
         ~~~~
!!! error TS1171: A comma expression is not allowed in a computed property name.
    }